grafana/result/grafana/templates/deploy/service.yaml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prometheus-monitor
  labels:
    helm.sh/chart: grafana-6.18.1
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "8.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000

  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
